--- a/package.json
+++ b/package.json
@@ -5,25 +5,15 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "mocha src/**/*.test.js",
-    "lint": "eslint src/",
-    "prepare": "husky install"
+    "lint": "eslint src/"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^7.18.0",
-    "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
     "mocha": "^8.3.2",
     "prettier": "2.2.1",
     "supertest": "^6.1.3"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "**/*": "prettier --write --ignore-unknown"
   }
 }
