fixed prettier check

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node src/index.js",
     "test": "mocha src/**/*.test.js",
     "lint": "eslint src/",
-    "prettier:check": "prettier --check"
+    "prettier:check": "prettier --check ."
   },
   "author": "",
   "license": "ISC",
